...
    <string name="add_new_task">+ Add new task</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_pomodoro">Pomodoro</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_settings">Settings</string>
    <string name="pause">Pause</string>
    <string name="skip">Skip</string>
    <string name="reset_timer">Reset timer</string>
    <string name="skip_phase">Skip to the next phase</string>
    <string name="session_x_of_y">Session %1$d of %2$d</string>
    <string name="short_break">Short break</string>
    <string name="long_break">Long break</string>
...
