<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tasks"
        android:title="@string/nav_tasks"
        android:icon="@drawable/checklist"/>
    <item
        android:id="@+id/calendar"
        android:title="@string/nav_calendar"
        android:icon="@drawable/calendar"/>
    <item
        android:id="@+id/pomodoro"
        android:title="@string/nav_pomodoro"
        android:icon="@drawable/clock"/>
    <item
        android:id="@+id/stats"
        android:title="@string/nav_stats"
        android:icon="@drawable/stats"/>
    <item
        android:id="@+id/settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/settings"/>
</menu>