...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tasks.TasksFragment">

    <TextView
        android:id="@+id/tasksTitle"
        style="@style/Widget.Zen.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:layout_marginTop="@dimen/title_margin_top"
        android:gravity="center_horizontal"
...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/screen_margin"
        android:paddingBottom="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@id/addNewTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tasksTitle"
        app:layout_constraintWidth_max="@dimen/content_max_width" />

    <Button
...
