...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/content_max_width">

            <TextView
                android:id="@+id/settingsTitle"
                style="@style/Widget.Zen.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_top"
                android:gravity="center_horizontal"
                android:text="@string/settings" />
...
